# br-mysql-connector

./: LICENSE  README.md  README_CN.md
AS/: .gitignore  MySQLConnectorDemo.apj
AS/Logical/: Package.pkg
AS/Logical/Libraries/: Package.pkg
AS/Logical/MyLibraries/: Package.pkg
AS/Logical/MyLibraries/BrRand/: ANSIC.lby  BrRand.fun  FB_RandString.c  RandBOOL.c  RandDINT.c  RandINT.c  RandLREAL.c  RandREAL.c  RandRange.c  RandRangeReal.c  RandRangeSigned.c  RandRangeUnsigned.c  RandSINT.c  RandUDINT.c  RandUINT.c  RandUSINT.c  RandomBase.c
AS/Logical/MyLibraries/LxVar/: ANSIC.lby  Constants.var  DataJoint.c  DataSeparate.c  FB_ContinualStrcat.c  FB_Dec2Hex.cc  FB_GetLocalPvAddr.c  FB_GetModuleName.c  FB_GetPvAddrStr.c  FB_GetPvEntireName.c  FB_GetPvInfo.c  FB_GetStruPvMemName.c  FB_Hex2Dec.cc  FB_LReal2Str.cc  FB_Real2Str.cc  FB_ShowAddrData.c  FB_ShowLocalPvAddrData.c  FB_ShowPvAddrData.c  FB_Udint2Str.c  GetPvOutside.c  JudgeSrcPvInfoNum.c  LxVar.fun  ReturnPvAddr.c  Strcats.c  Strcpys.c  Strlens.c  Types.typ  VarServLogWrite.c  VarWarnLogWrite.c  openErrorList.txt
AS/Logical/MySQLInserter/: GlobalMySQL.typ  GlobalMySQL.var  Package.pkg
AS/Logical/MySQLInserter/CmdGenerator/: ANSIC.prg  Main.c  SqlMaker.c  SqlMaker.h  Variables.var
AS/Logical/MySQLInserter/Demo/: Main.st  Variables.var
AS/Logical/MySQLInserter/SqlWriter/: ANSIC.prg  Main.c  Variables.var  deque.c  deque.h
AS/Physical/Config1/: Hardware.hw  Hardware.hwl
CPP/: .gitignore  CMakeLists.txt  cfg.json  main.cpp
CPP/include/: open62541.h
Python/: .gitignore  SqlRepeater.py  requirements.txt
(+3 files in other folders)
